feat(platform): real Forge 1.12.2 integration with live server support
Convert the 1.12.2 branch from a plain Java-library stub into a real
Minecraft Forge 1.12.2 mod that builds, loads, and runs on a dedicated
server.

Build tooling:
- Replace plain java-library build with RetroFuturaGradle 1.4.9
- Downgrade Gradle wrapper to 8.8 (RFG 1.4.9 compatibility)
- Add CleanroomMC and GTNH plugin repositories
- Add Foojay toolchain resolver for automatic Java 8 provisioning
- Use Jabel 0.4.2 to compile Java 17 records down to Java 8 bytecode
- Add @Desugar annotations to all record types

Forge runtime:
- Add HeapHammerForge @Mod entrypoint with FMLServerStartedEvent,
  ServerTickEvent, and server lifecycle wiring
- Add CommandHeapHammer1122 implementing the full 26-command matrix
  using the 1.12.2 Forge/Minecraft command API
- Add mcmod.info descriptor with version filtering
- Add ForgePlatformAdapter.captureFingerprint() version correction
  from stale 1.0.0-alpha.1 to 1.0.1

Java 8 compatibility:
- Replace List.of(), Map.of(), Set.of() with Collections equivalents
- Replace List.copyOf(), Set.copyOf() with unmodifiable collection copies
- Replace String.isBlank() with trim().isEmpty()
- Replace Stream.toList() with Collectors.toList()
- Replace Optional.isEmpty() with !isPresent()
- Replace Files.writeString/readString with Files.write/readAllBytes
- Replace CompletableFuture.failedFuture with manual exceptional completion
- Exclude JfrTrigger (jdk.jfr unavailable on Java 8)

Verification:
- Live Forge 1.12.2 dedicated server test: 26/26 commands PASS
- Zero crashes, zero exceptions, clean ticket lifecycle
- Workload runs produce reports, cleanup purges all state

Generated with [Devin](https://devin.ai)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>