@@ -1,10 +1,13 @@
 package com.dwurdy.heaphammer.domain;
 
+import com.github.bsideup.jabel.Desugar;
+
 import java.util.Objects;
 
 /**
  * Identifier for a scenario family (e.g. "chunks").
  */
+@Desugar
 public record ScenarioId(String value) {
     public static final ScenarioId CHUNKS = new ScenarioId("chunks");
     public static final ScenarioId ENTITIES = new ScenarioId("entities");
@@ -16,7 +19,7 @@ public record ScenarioId(String value) {
 
     public ScenarioId {
         Objects.requireNonNull(value, "ScenarioId value must not be null");
-        if (value.isBlank()) {
+        if (value.trim().isEmpty()) {
             throw new IllegalArgumentException("ScenarioId value must not be blank");
         }
     }
